--- a/bioms.css
+++ b/bioms.css
@@ -19,7 +19,7 @@ padding: 15px 350px;
 }
 .promo{
 	height: 700px;
-	background: url(bioms.jpg);
+	background: url(bioms.png);
 	background-size: cover;
 	display: flex;
 	justify-content: center;
@@ -28,3 +28,34 @@ padding: 15px 350px;
 .promo_text{
 	font-size: 80px;
 }
+.info{
+	padding: 50px 300px;
+}
+h2{
+	font-size: 36px;
+	text-align: center;
+	text-transform: uppercase;
+	margin-top: 30px;
+}
+p{
+	text-align: justify;
+	margin-top: 30px;
+}
+.info_box{
+	display: flex;
+	justify-content: space-between;
+	align-items: start;
+	margin-top: 30px;
+}
+
+.info_box img{
+	width: 500px;
+	margin-right: 30px;
+}
+.info_box_text{
+}
+h3{
+	text-align: center;
+	font-size: 26px;
+}
+
